# CppParallelSTL

./: README.md
FileSizes/: CMakeLists.txt  main.cpp
FileWordCount/: CMakeLists.txt  main.cpp
ParSTLTests/: CMakeLists.txt  main.cpp
TransformTests/: CMakeLists.txt  main.cpp
WordCount/: CMakeLists.txt  main.cpp
